@@ -7,9 +7,20 @@ repositories {
 }
 
 dependencies {
+    compileOnly(gradleApi())
     compileOnly("org.jetbrains:annotations:26.1.0")
+    testImplementation(gradleTestKit())
+    testCompileOnly("org.jetbrains:annotations:26.1.0")
+    testImplementation(platform("org.junit:junit-bom:6.0.0"))
+    testImplementation("org.junit.jupiter:junit-jupiter")
+    testRuntimeOnly("org.junit.platform:junit-platform-launcher")
 }
 
 tasks.withType<JavaCompile>().configureEach {
     options.release = 17
+}
+
+tasks.withType<Test>().configureEach {
+    useJUnitPlatform()
+    jvmArgs("--add-opens=java.base/java.lang=ALL-UNNAMED")
 }
